--- a/special-pages/pages/new-tab/app/omnibar/components/SuggestionsList.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/SuggestionsList.module.css
@@ -48,6 +48,7 @@
 
         .deleteButton {
             opacity: 1;
+            pointer-events: auto;
         }
     }
 
@@ -107,6 +108,7 @@
     margin-left: auto;
     opacity: 0;
     padding: var(--sp-1);
+    pointer-events: none;
 
     svg {
         height: 16px;
@@ -116,5 +118,6 @@
 
     &:focus-visible {
         opacity: 1;
+        pointer-events: auto;
     }
 }
